添加日程页面

--- a/apps/web/core/i18n/en/menu.json
+++ b/apps/web/core/i18n/en/menu.json
@@ -7,5 +7,7 @@
     "buyRecord": "Orders",
     "powerDetail": "Usage",
     "agent": "Agent",
-    "chat": "Chat"
+    "chat": "Chat",
+    "square": "Agent Square",
+    "schedule": "Schedule"
 }
