--- a/apps/web/core/i18n/jp/menu.json
+++ b/apps/web/core/i18n/jp/menu.json
@@ -7,5 +7,7 @@
     "buyRecord": "購入履歴",
     "powerDetail": "計算力明細",
     "agent": "智能体",
-    "chat": "会話"
+    "chat": "会話",
+    "square": "智能体広場",
+    "schedule": "日程"
 }
