--- a/apps/web/core/i18n/zh/menu.json
+++ b/apps/web/core/i18n/zh/menu.json
@@ -7,5 +7,7 @@
     "buyRecord": "购买记录",
     "powerDetail": "算力明细",
     "agent": "智能体",
-    "chat": "对话"
+    "chat": "对话",
+    "square": "智能体",
+    "schedule": "日程"
 }
