Refactor code structure for improved readability and maintainability

--- a/packages/web/buildingai-ui/app/i18n/zh/menu.json
+++ b/packages/web/buildingai-ui/app/i18n/zh/menu.json
@@ -8,5 +8,6 @@
     "powerDetail": "积分明细",
     "agent": "智能体",
     "agentSquare": "智能体广场",
-    "chat": "对话"
+    "chat": "对话",
+    "schedule": "日程"
 }
